syntax = "proto3";

// 命 令 号: 201
// 命令名称: id_set
// 命令描述: 修改id
// 文件名称: s201_id_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbIdSet";

message IdSetRequest {
  // ATTR: REQUSET
  uint32 new_id = 1; //新id
}

message IdSetResponse {

}
